==> spacemonqi/sigfox-sensors/Push_Button_Demo (old)/Projects/Drivers/S2LP_Middleware/BlueNRG/src/S2LP_CORE_GPIO.c <==
#include "SDK_EVAL_Config.h"
#include "S2LP_Middleware_Config.h"
#include "S2LP_CORE_GPIO.h"

void S2LP_Middleware_GpioInit(M2SGpioPin xGpio, M2SGpioMode xGpioMode)
{
  GPIO_InitType GPIO_InitStructure;

  /* Check the parameters */
  assert_param(IS_M2S_GPIO_PIN(xGpio));
  assert_param(IS_M2S_GPIO_MODE(xGpioMode));

  /* Configures MCU GPIO */
  switch (xGpioMode) {
  case M2S_MODE_GPIO_OUT:
    GPIO_InitStructure.GPIO_Mode = GPIO_Output;
    break;
  case M2S_MODE_GPIO_IN:
    GPIO_InitStructure.GPIO_Mode = GPIO_Input;
    break;
  case M2S_MODE_EXTI_IN:
    GPIO_InitStructure.GPIO_Mode = s_vectxM2sGpioExtiMode[xGpio];
    break;
  default:
    break;
  }

  SysCtrl_PeripheralClockCmd(CLOCK_PERIPH_GPIO, ENABLE);

  GPIO_InitStructure.GPIO_Pin = s_vectnM2SGpioPin[xGpio];
  GPIO_InitStructure.GPIO_Pull = (FunctionalState)s_vectxM2SGpioPuPd[xGpio];
  GPIO_InitStructure.GPIO_HighPwr = DISABLE;
  GPIO_Init(&GPIO_InitStructure);

  if (xGpioMode == M2S_MODE_EXTI_IN)
  {
    GPIO_EXTIConfigType GPIO_EXTIStructure;

    GPIO_EXTIStructure.GPIO_Pin = s_vectnM2SGpioPin[xGpio];
    GPIO_EXTIStructure.GPIO_IrqSense = M2S_GPIO_IRQ_SENSE;
    GPIO_EXTIStructure.GPIO_Event = M2S_GPIO_EDGE_EVENT; //0 means falling edge, 1 raising
    GPIO_EXTIConfig(&GPIO_EXTIStructure);

    GPIO_ClearITPendingBit(s_vectnM2SGpioPin[xGpio]);

    GPIO_EXTICmd(s_vectnM2SGpioPin[xGpio], ENABLE);
  }
}

void S2LP_Middleware_GpioInterruptCmd(M2SGpioPin xGpio, uint8_t nPreemption, uint8_t nSubpriority, uint8_t enable, uint8_t edge_direction)
{
  GPIO_EXTIConfigType GPIO_EXTIStructure;

  FunctionalState newState = enable ? ENABLE:DISABLE;

  /* Configures EXTI line */
  GPIO_EXTIStructure.GPIO_Pin = s_vectnM2SGpioPin[xGpio];
  GPIO_EXTIStructure.GPIO_IrqSense = M2S_GPIO_IRQ_SENSE;
  GPIO_EXTIStructure.GPIO_Event = edge_direction; //0 means falling edge, 1 raising

  GPIO_EXTIConfig(&GPIO_EXTIStructure);

  GPIO_EXTICmd(s_vectnM2SGpioPin[xGpio], newState);

  GPIO_ClearITPendingBit(s_vectnM2SGpioPin[xGpio]);

  /* Set the GPIO interrupt priority and enable/disable it */
  if(newState == ENABLE)
  {
    NVIC_InitType NVIC_InitStructure;

    NVIC_InitStructure.NVIC_IRQChannel = GPIO_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = M2S_GPIO_IRQ_EXTI_PRIORITY;
    NVIC_InitStructure.NVIC_IRQChannelCmd = newState;

    NVIC_Init(&NVIC_InitStructure);
  }
}

void S2LP_Middleware_GpioTriggerRising(M2SGpioPin xGpio, uint8_t enable)
{
  GPIO_EXTIConfigType GPIO_EXTIStructure;

  /* Configures EXTI line */

  GPIO_EXTIStructure.GPIO_Pin = s_vectnM2SGpioPin[xGpio];
  GPIO_EXTIStructure.GPIO_IrqSense = GPIO_IrqSense_Edge;
  GPIO_EXTIStructure.GPIO_Event = (uint8_t)enable; //0 means falling edge, 1 raising
  GPIO_EXTIConfig(&GPIO_EXTIStructure);
}

uint8_t S2LP_Middleware_GetTriggerRising(M2SGpioPin xGpio)
{
  uint32_t GPIO_Pin = s_vectnM2SGpioPin[xGpio];
  uint8_t edge = READ_BIT(GPIO->IS, GPIO_Pin) == 0;
  uint8_t both_edge = READ_BIT(GPIO->IBE, GPIO_Pin) == 1;
  uint8_t falling = READ_BIT(GPIO->IEV, GPIO_Pin) == 0;

  if (edge && !(both_edge))
    return falling ? 0 : 1;
  else
    return 0;
}

void S2LP_Middleware_GpioTriggerFalling(M2SGpioPin xGpio, uint8_t enable)
{
  GPIO_EXTIConfigType GPIO_EXTIStructure;

  if(enable)
  {
    /* Configures EXTI line */
    GPIO_EXTIStructure.GPIO_Pin = s_vectnM2SGpioPin[xGpio];
    GPIO_EXTIStructure.GPIO_IrqSense = GPIO_IrqSense_Edge;
    GPIO_EXTIStructure.GPIO_Event = (uint8_t)0; //0 means falling edge, 1 raising

    GPIO_EXTIConfig(&GPIO_EXTIStructure);
  }
}

uint8_t S2LP_Middleware_GpioGetTriggerFalling(M2SGpioPin xGpio)
{
  uint32_t GPIO_Pin = s_vectnM2SGpioPin[xGpio];
  uint8_t edge = READ_BIT(GPIO->IS, GPIO_Pin) == 0;
  uint8_t both_edge = READ_BIT(GPIO->IBE, GPIO_Pin) == 1;
  uint8_t falling = READ_BIT(GPIO->IEV, GPIO_Pin) == 0;

  if (edge && !(both_edge))
    return falling ? 1 : 0;
  else
    return 0;
}

uint8_t S2LP_Middleware_GpioGetLevel(M2SGpioPin xGpio)
{
  /* Gets the GPIO level */
  uint8_t ret;
  uint32_t GPIO_Pin = s_vectnM2SGpioPin[xGpio];

  ret = (uint8_t) GPIO_ReadBit(GPIO_Pin);

  return ret;
}

void S2LP_Middleware_GpioSetLevel(M2SGpioPin xGpio, uint8_t level)
{
  BitAction xLevel = level ? Bit_SET : Bit_RESET;

  /* Sets the GPIO level */
  GPIO_WriteBit(s_vectnM2SGpioPin[xGpio], xLevel);}

void S2LPShutdownInit(void)
{
  GPIO_InitType GPIO_InitStructure;
  SysCtrl_PeripheralClockCmd(CLOCK_PERIPH_GPIO, ENABLE);

  GPIO_InitStructure.GPIO_Pin = S2LP_M2S_SDN_PIN;
  GPIO_InitStructure.GPIO_Mode = S2LP_M2S_SDN_MODE;
  GPIO_InitStructure.GPIO_Pull = S2LP_M2S_SDN_PUPD;
  GPIO_InitStructure.GPIO_HighPwr = S2LP_M2S_SDN_HIGH_POWER;
  GPIO_Init(&GPIO_InitStructure);

  S2LPShutdownEnter();
}

void S2LPShutdownEnter(void)
{
  /* Puts high the GPIO connected to shutdown pin */
  GPIO_SetBits(S2LP_M2S_SDN_PIN);
}

void S2LPShutdownExit(void)
{
  /* Puts low the GPIO connected to shutdown pin */
  GPIO_ResetBits(S2LP_M2S_SDN_PIN);

  /* Delay to allow the circuit POR */
  for(volatile uint32_t i=0;i<0x1E00;i++);
}
