==> BdF-LabSec/s2-lp-flipper-chat/Drivers/S2LP_Middleware/src/S2LP_CORE_GPIO.c <==
#include "S2LP_Middleware_Config.h"
#include "S2LP_CORE_GPIO.h"

void S2LP_Middleware_GpioInit(M2SGpioPin xGpio, M2SGpioMode xGpioMode)
{
  GPIO_InitTypeDef GPIO_InitStructure;

  /* Check the parameters */
  assert_param(IS_M2S_GPIO_PIN(xGpio));
  assert_param(IS_M2S_GPIO_MODE(xGpioMode));

  switch(xGpio)
  {
  case M2S_GPIO_0:
    M2S_GPIO_0_CLOCK_NUCLEO();
    break;
  case M2S_GPIO_1:
    M2S_GPIO_1_CLOCK_NUCLEO();
    break;
  case M2S_GPIO_2:
    M2S_GPIO_2_CLOCK_NUCLEO();
    break;
  case M2S_GPIO_3:
    M2S_GPIO_3_CLOCK_NUCLEO();
    break;
  }

  /* Configures MCU GPIO */
  switch (xGpioMode) {
  case M2S_MODE_GPIO_OUT:
    GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
    break;
  case M2S_MODE_GPIO_IN:
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
    break;
  case M2S_MODE_EXTI_IN:
    GPIO_InitStructure.Mode = s_vectxM2sGpioExtiMode[xGpio];
    break;
  default:
    break;
  }

  GPIO_InitStructure.Pin = s_vectnM2SGpioPin[xGpio];
  GPIO_InitStructure.Pull = s_vectxM2SGpioPuPd[xGpio];
  GPIO_InitStructure.Speed = s_vectxM2SGpioSpeed[xGpio];

  HAL_GPIO_Init(vectpxM2SGpioPort[xGpio], &GPIO_InitStructure);

  if (xGpioMode == M2S_MODE_EXTI_IN) {
    __HAL_GPIO_EXTI_CLEAR_IT(s_vectnM2SGpioPin[xGpio]);
  }
}

void S2LP_Middleware_GpioInterruptCmd(M2SGpioPin xGpio, uint8_t nPreemption, uint8_t nSubpriority, uint8_t enable)
{
  if (enable)  {
    HAL_NVIC_SetPriority(s_vectcM2SGpioExtiIrqn[xGpio], nPreemption, nSubpriority);
    HAL_NVIC_EnableIRQ(s_vectcM2SGpioExtiIrqn[xGpio]);
  }
  else {
    HAL_NVIC_DisableIRQ(s_vectcM2SGpioExtiIrqn[xGpio]);
  }
}

void S2LP_Middleware_GpioTriggerRising(M2SGpioPin xGpio, uint8_t enable)
{
  if(enable)
    EXTI->RTSR |= (uint16_t)s_vectnM2SGpioPin[xGpio];
  else
    EXTI->RTSR &= ~(uint16_t)s_vectnM2SGpioPin[xGpio];
}

uint8_t S2LP_Middleware_GetTriggerRising(M2SGpioPin xGpio)
{
  if(EXTI->RTSR & (uint16_t)s_vectnM2SGpioPin[xGpio])
    return 1;

  return 0;
}

void S2LP_Middleware_GpioTriggerFalling(M2SGpioPin xGpio, uint8_t enable)
{
  if(enable)
    EXTI->FTSR |= (uint16_t)s_vectnM2SGpioPin[xGpio];
  else
    EXTI->FTSR &= ~(uint16_t)s_vectnM2SGpioPin[xGpio];
}

uint8_t S2LP_Middleware_GpioGetTriggerFalling(M2SGpioPin xGpio)
{
  if(EXTI->FTSR & (uint16_t)s_vectnM2SGpioPin[xGpio])
    return 1;

  return 0;
}

uint8_t S2LP_Middleware_GpioGetLevel(M2SGpioPin xGpio)
{
  /* Gets the GPIO level */
  GPIO_PinState ret = HAL_GPIO_ReadPin(vectpxM2SGpioPort[xGpio], s_vectnM2SGpioPin[xGpio]);

  return ((ret==GPIO_PIN_SET) ? 1 : 0);
}

void S2LP_Middleware_GpioSetLevel(M2SGpioPin xGpio, uint8_t level)
{
  /* Sets the GPIO level */
  HAL_GPIO_WritePin(vectpxM2SGpioPort[xGpio], s_vectnM2SGpioPin[xGpio], (level == 0) ? GPIO_PIN_RESET: GPIO_PIN_SET);
}

void S2LPShutdownInit(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;

  S2LP_M2S_SDN_CLOCK();

  /* Configures MCU GPIO */
  GPIO_InitStructure.Pin   = S2LP_M2S_SDN_PIN;
  GPIO_InitStructure.Mode  = S2LP_M2S_SDN_MODE;
  GPIO_InitStructure.Pull  = S2LP_M2S_SDN_PUPD;
  GPIO_InitStructure.Speed = S2LP_M2S_SDN_SPEED;

  HAL_GPIO_Init(S2LP_M2S_SDN_PORT, &GPIO_InitStructure);

  S2LPShutdownEnter();
}

void S2LPShutdownEnter(void)
{
  /* Puts high the GPIO connected to shutdown pin */
  HAL_GPIO_WritePin(S2LP_M2S_SDN_PORT, S2LP_M2S_SDN_PIN, GPIO_PIN_SET);
}

void S2LPShutdownExit(void)
{
  /* Puts low the GPIO connected to shutdown pin */
  HAL_GPIO_WritePin(S2LP_M2S_SDN_PORT, S2LP_M2S_SDN_PIN, GPIO_PIN_RESET);

  /* Delay to allow the circuit POR, about 700 us */
  for(volatile uint32_t i=0;i<0x1E00;i++);
}
